--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -23,7 +23,7 @@ jobs:
         run: dart pub get
       - name: Check formatting
         if: always() && steps.install.outcome == 'success'
-        run: dart format --set-exit-if-changed .
+        run: dart format --line-length 120 --set-exit-if-changed .
       - name: Run analyzer and annotate
         if: always() && steps.install.outcome == 'success'
         uses: kitek/dartanalyzer-annotations-action@v1
