--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,16 +1,6 @@
-# https://www.dartlang.org/guides/language/analysis-options
-
-include: package:pedantic/analysis_options.yaml
+# https://github.com/dart-lang/lints#migrating-from-packagepedantic
+include: package:lints/recommended.yaml
 
 analyzer:
-  strong-mode:
-    implicit-casts: false
-    implicit-dynamic: false
   exclude:
     - example/**/*.dart
-linter:
-  rules:
-    # - public_member_api_docs
-    # - type_annotate_public_apis
-    - void_checks
-    - unnecessary_new
