--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -15,38 +15,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1
+      - uses: dart-lang/setup-dart@v1.3
         with:
-          sdk: 2.13.4
+          sdk: stable
       - id: install
         name: Install dependencies
         run: dart pub get
       - name: Check formatting
         if: always() && steps.install.outcome == 'success'
-        run: dart format --line-length 120 --set-exit-if-changed .
-      - name: Run analyzer and annotate
-        if: always() && steps.install.outcome == 'success'
-        uses: kitek/dartanalyzer-annotations-action@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          check_name: Check code style
-          commit_sha: ${{ github.event.pull_request.head.sha }}
+        run: dart format --set-exit-if-changed .
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1
+      - uses: dart-lang/setup-dart@v1.3
         with:
-          sdk: 2.13.4
+          sdk: stable
       - id: install
         name: Install dependencies
         run: dart pub get
       - name: Test
         if: always() && steps.install.outcome == 'success'
-        run: pub run test --file-reporter='json:test-report.json'
-        continue-on-error: true
-      - name: Annotate with test errors
-        uses: rodrigost23/dart-test-annotations@v1.0
+        run: dart test
+  analyze:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v1.3
         with:
-          path: test-report.json
+          sdk: stable
+      - id: install
+        name: Install dependencies
+        run: dart pub get
+      - name: Analyze
+        if: always() && steps.install.outcome == 'success'
+        run: dart analyze
