--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: big_decimal
-version: 0.4.0
+version: 0.4.1
 description: >
   A bugless implementation of BigDecimal in Dart based on Java's BigDecimal
 
@@ -8,4 +8,5 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dev_dependencies:
+  lints: ^2.0.1
   test: ^1.17.2
